[package]
name = "fault-tolerant-telemetry"
version = "0.1.0"
edition = "2021"
authors = ["SpaceX Candidate"]
description = "Fault-tolerant distributed telemetry system with Raft consensus for spacecraft data pipelines"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
async-trait = "0.1"
thiserror = "1"
dashmap = "5"
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "telemetry-node"
path = "src/main.rs"

[[bin]]
name = "telemetry-cluster"
path = "src/cluster_demo.rs"
